Fix issue with prompt box shrinking on small enough viewport sizes / overflow

--- a/src/renderer/components/ft-prompt/ft-prompt.css
+++ b/src/renderer/components/ft-prompt/ft-prompt.css
@@ -2,8 +2,8 @@
   position: fixed;
   inset-block-start: 0px;
   inset-inline-start: 0px;
-  inline-size: 100vw;
-  block-size: 100vh;
+  inline-size: 100%;
+  block-size: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 10;
   padding: 15px;
@@ -11,6 +11,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.promptCard {
+  overflow-y: scroll;
 }
 
 .promptCard.autosize {
